| Summary: | ASTERISK-29806: app_queue: extension state incorrect | ||||||||
| Reporter: | Steve Davies (one47) | Labels: | |||||||
| Date Opened: | 2021-12-15 06:41:56.000-0600 | Date Closed: | 2022-01-05 08:07:59.000-0600 | ||||||
| Priority: | Major | Regression? | No | ||||||
| Status: | Closed/Complete | Components: | Applications/app_queue | ||||||
| Versions: | 16.24.0 18.10.0 19.2.0 | Frequency of Occurrence | Constant | ||||||
| Related Issues: |
| ||||||||
| Environment: | Attachments: | ||||||||
| Description: | There is a bug in the patch that was applied in ASTERISK-29578. I have a patch to submit, which:
1) Does not leak `extension_state_cb` states across queues - In the current patch, the `found` variable is set, and then remains set as the update progresses to another queue, causing the 'found' state to be applied to the first queue member of every subsequent queue checked. 2) Unlike `device_state_cb`, where device will definitely be unique in a queue, extension states might be specified multiple times, so breaking out when a member matches is inappropriate. | ||||||||
| Comments: | By: Asterisk Team (asteriskteam) 2021-12-15 06:41:56.771-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-01-05 08:07:59.831-0600 Change 17658 merged by Joshua Colp: app_queue: Fix hint updates, allow dup. hints [https://gerrit.asterisk.org/c/asterisk/+/17658|https://gerrit.asterisk.org/c/asterisk/+/17658] By: Friendly Automation (friendly-automation) 2022-01-05 08:08:56.116-0600 Change 17723 merged by Joshua Colp: app_queue: Fix hint updates, allow dup. hints [https://gerrit.asterisk.org/c/asterisk/+/17723|https://gerrit.asterisk.org/c/asterisk/+/17723] By: Friendly Automation (friendly-automation) 2022-01-05 08:11:27.579-0600 Change 17736 merged by Friendly Automation: app_queue: Fix hint updates, allow dup. hints [https://gerrit.asterisk.org/c/asterisk/+/17736|https://gerrit.asterisk.org/c/asterisk/+/17736] By: Friendly Automation (friendly-automation) 2022-01-05 08:42:56.377-0600 Change 17737 merged by Joshua Colp: app_queue: Fix hint updates, allow dup. hints [https://gerrit.asterisk.org/c/asterisk/+/17737|https://gerrit.asterisk.org/c/asterisk/+/17737] | ||||||||